# hcell

./: .gitignore  LICENSE  Makefile  TAGS  battle-plan.org  clean.sh  hcell.cabal  stack.yaml
app/: Main.hs
src/: CollisionGrid.hs  Color.hs  Display.hs  Draw.hs  Game.hs  Grid.hs  Lib.hs  LifeForm.hs  Loc.hs  Program.hs  SpaceHash.hs  Step.hs  Types.hs  Universe.hs  Util.hs
